--- a/src/homepage.html
+++ b/src/homepage.html
@@ -53,10 +53,10 @@
         What sets it apart from all the existing music players is that we intend to bring all the best features of different music players/apps out there to bring you the best mixes of music. <br>
         It includes features like <br>
         <ul>
-          <li> song streaming </li>
-          <li> song recognition </li>
-          <li> providing lyrics for songs </li>
-          <li> recommending songs based on tone analysis </li>
+          <li> Song Streaming </li>
+          <li> Song Recognition </li>
+          <li> Providing lyrics for songs </li>
+          <li> Recommending songs based on Tone Analysis </li>
         </ul>
       </p>
   </div>
