--- a/src/dashboard.html
+++ b/src/dashboard.html
@@ -9,40 +9,124 @@
 </head>
 <body>
 <!-- partial:index.partial.html -->
-<header>
-  <h1>Welcome to Music.ly!</h1>
-  <h3> Continue listening...</h3>
-</header>
+<div class="wrapper">
+  <h1>WELCOME TO MUSIC.LY</h1>
 
-<!-- <section>
-  <div class="column green"><img src="https://images.pexels.com/photos/60883/girl-eyes-makeup-sexy-60883.jpeg?w=1260&h=750&auto=compress&cs=tinysrgb"/></div>
-  <div class="column red-purple"><img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/927610/girl-eyes-makeup-sexy-60883.jpeg"/></div>
-</section> -->
-
-<section>
-  <!-- <div class="column vintage"><img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/927610/pexels-photo.jpg"/></div>
-  <div class="column retro"><img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/927610/pexels-photo-194074.jpg"/></div>
-  <div class="column blue-light"><img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/927610/pexels-photo-207081.jpeg"/></div>
-  <div class="column blue"><img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/927610/pexels-157675.jpeg"/></div> -->
-
-  <div class="column green"><img src="https://raw.githubusercontent.com/muhammederdem/mini-player/master/img/1.jpg"/></div>
-  <div class="column red-purple"><img src="https://raw.githubusercontent.com/muhammederdem/mini-player/master/img/4.jpg"/></div>
-</section>
-
-<section>
-  <div class="column teal"><img src="https://raw.githubusercontent.com/muhammederdem/mini-player/master/img/3.jpg"/></div>
-  <div class="column purple"><img src="https://raw.githubusercontent.com/muhammederdem/mini-player/master/img/2.jpg"/></div>
-  <div class="column pink"><img src="https://raw.githubusercontent.com/muhammederdem/mini-player/master/img/5.jpg"/></div>
-</section>
-
-<section>
-  <div class="column yellow"><img src="https://raw.githubusercontent.com/muhammederdem/mini-player/master/img/6.jpg"/></div>
-  <div class="column orange"><img src="https://raw.githubusercontent.com/muhammederdem/mini-player/master/img/7.jpg"/></div>
-  <div class="column blue-red"><img src="https://raw.githubusercontent.com/muhammederdem/mini-player/master/img/8.jpg"/></div>
-  <div class="column gold"><img src="https://raw.githubusercontent.com/muhammederdem/mini-player/master/img/9.jpg"/></div>
-</section>
-
-
+  <div class="cols">
+			<div class="col" ontouchstart="this.classList.toggle('hover');">
+				<div class="container">
+					<div class="front" style="background-image: url(https://th.bing.com/th/id/R.326de33d0c82486423149eaf3f992df6?rik=dQlNixaqpQ1pHg&riu=http%3a%2f%2fwww.clashmusic.com%2fsites%2fdefault%2ffiles%2fstyles%2farticle_feature%2fpublic%2ffield%2fimage%2fed-sheeran-divide-album-cover-2017-march-1484221917.jpg%3fitok%3dCYHbIS2V&ehk=SYRB54VVrT7TIsMccNQOTGt9AJt8EKvKVJN4zHHyxtU%3d&risl=&pid=ImgRaw&r=0)">
+						<div class="inner">
+							<p>POP</p>
+						</div>
+					</div>
+					<div class="back">
+						<div class="inner">
+						  <p><a href="https://open.spotify.com/genre/pop-page">Check out playlists</a></p>
+						</div>
+					</div>
+				</div>
+			</div>
+			<div class="col" ontouchstart="this.classList.toggle('hover');">
+				<div class="container">
+					<div class="front" style="background-image: url(https://th.bing.com/th/id/OIP.s3cfFN-o_WGRWmxQOn-VcgHaHa?pid=ImgDet&rs=1)">
+						<div class="inner">
+							<p>ROCK</p>
+						</div>
+					</div>
+					<div class="back">
+						<div class="inner">
+							<p><a href="https://open.spotify.com/genre/rock-page">Check out playlists</a></p>
+						</div>
+					</div>
+				</div>
+			</div>
+			<div class="col" ontouchstart="this.classList.toggle('hover');">
+				<div class="container">
+					<div class="front" style="background-image: url(https://th.bing.com/th/id/OIP.E9as335dhY1MZ907Ny2tLQHaHa?pid=ImgDet&rs=1)">
+						<div class="inner">
+							<p>JAZZ</p>
+						</div>
+					</div>
+					<div class="back">
+						<div class="inner">
+							<p><a href="https://open.spotify.com/genre/jazz-page">Check out playlists</a></p>
+						</div>
+					</div>
+				</div>
+			</div>
+			<div class="col" ontouchstart="this.classList.toggle('hover');">
+				<div class="container">
+					<div class="front" style="background-image: url(https://th.bing.com/th/id/OIP.e-u2crfN5WAK0Zugz4159wHaHa?pid=ImgDet&rs=1)">
+						<div class="inner">
+							<p>HIP HOP</p>
+						</div>
+					</div>
+					<div class="back">
+						<div class="inner">
+							<p><a href="https://open.spotify.com/genre/hiphop-page">Check out playlists</a></p>
+						</div>
+					</div>
+				</div>
+			</div>
+			<div class="col" ontouchstart="this.classList.toggle('hover');">
+				<div class="container">
+					<div class="front" style="background-image: url(https://i.pinimg.com/originals/6b/56/4b/6b564bd2373d471ed13ab27e398157ac.jpg)">
+						<div class="inner">
+							<p>TRAVEL</p>
+						</div>
+					</div>
+					<div class="back">
+						<div class="inner">
+							<p><a href="https://open.spotify.com/genre/travel-page">Check out playlists</a></p>
+						</div>
+					</div>
+				</div>
+			</div>
+			<div class="col" ontouchstart="this.classList.toggle('hover');">
+				<div class="container">
+					<div class="front" style="background-image: url(https://www.music-bazaar.com/album-images/vol15/731/731607/2579899-big/Bollywood-Funk-Experience-cover.jpg)">
+						<div class="inner">
+							<p>HINDI</p>
+						</div>
+					</div>
+					<div class="back">
+						<div class="inner">
+							<p><a href="https://open.spotify.com/genre/bollywood-page">Check out playlists</a></p>
+						</div>
+					</div>
+				</div>
+			</div>
+			<div class="col" ontouchstart="this.classList.toggle('hover');">
+				<div class="container">
+					<div class="front" style="background-image: url(https://th.bing.com/th/id/OIP.b-x910DtGqztLP1beWe_KgHaHa?pid=ImgDet&rs=1)">
+						<div class="inner">
+							<p>TELUGU</p>
+						</div>
+					</div>
+					<div class="back">
+						<div class="inner">
+							<p><a href="https://open.spotify.com/genre/telugu-page">Check out playlists</a></p>
+						</div>
+					</div>
+				</div>
+			</div>
+			<div class="col" ontouchstart="this.classList.toggle('hover');">
+				<div class="container">
+					<div class="front" style="background-image: url(https://i.pinimg.com/originals/89/8b/cf/898bcfc7acf9e84cf06c2c6f535e06b8.jpg)">
+						<div class="inner">
+							<p>ANIME</p>
+						</div>
+					</div>
+					<div class="back">
+						<div class="inner">
+							<p><a href="https://open.spotify.com/genre/anime-page">Check out playlists</a></p>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+ </div>
 <!-- partial -->
 
 </body>
